<resources>
    <string name="app_name">Covid-19 Tracker</string>
    <string name="read_write">Read / Write</string>
    <string name="read_and_write_activity">Read And Write Activity</string>
    <string name="collection_s_name_dummy">Collection\'s Name : Dummy</string>
    <string name="database_id_valuetowrite">Database ID : valueToWrite</string>
    <string name="read">Read</string>
    <string name="enter_value_to_write">Enter Value To Write !</string>
    <string name="value_from_database">Value From Database</string>
    <string name="write">Write</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="log_in_your_account">Log in your account</string>
    <string name="welcome_placeholder">Welcome to you\'re doom</string>
    <string name="reg_title">Welcome to\nCovid-19 tracker app</string>
    <string name="server_key">AAAAYsVv_lc:APA91bHYCaAhyvksii2L_DHO0gB3Q0_O7E2PzZ5v2CTTBpwlRznFtFDn6hZJcr-5FcBKLR5p0MCHMaggnT6oduyRBvU5ARUTfZCgh3KqnVe6T0lvONx3xt7wR5XdaVgRsgv6Xao_V9oJ</string>
    <string name="firebase_token">AIzaSyACWeD3kDB5Cyh9i7BVZJVpyn95JiiKyac</string>
    <string name="who_i_met_menu_item">Who I Met ?</string>
    <string name="notification_menu_item">Notification</string>
    <string name="settings_menu_item">Settings</string>
    <string name="log_out_menu_item">Log Out</string>

</resources>